--- a/clase3/maquetado.html
+++ b/clase3/maquetado.html
@@ -18,7 +18,9 @@
         </nav>
     </header>
     <main>
-            <a href="">texto que no se lee</a>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, doloremque non nostrum placeat temporibus exercitationem quisquam nulla! Sapiente labore blanditiis cupiditate molestias aliquam, debitis est consequuntur adipisci doloribus veritatis error.
+            </p>
     </main>
     <footer>
 
