header de proyecto integrador

--- a/sitio/index.html
+++ b/sitio/index.html
@@ -11,11 +11,17 @@
     <header>
         <!-- Logo + empresa -->
         <a href="index.html">
-            <img src="" alt="">
+            <img src="imgs/sunsea.png" alt="Logo Summer Exploring">
             Summer Exploring
         </a>
         <!-- navegación -->
+        <nav>
+            <a href="">Promociones</a>
+            <a href="">Destinos</a>
+            <a href="">Servicios</a>
+            <a href="">Contacto</a>
+        </nav>
     </header>
-    
+
 </body>
 </html>
