seccion hero-banner listo + promos sin terminar

--- a/sitio/index.html
+++ b/sitio/index.html
@@ -22,6 +22,39 @@
             <a href="">Contacto</a>
         </nav>
     </header>
+    <main>
+        <section id="hero-banner">
+            <h1>
+                Summer Exploring <br>
+                el lugar para tus vacaciones
+            </h1>
+        </section>
+        <section id="promos">
+            <article>
+                <img src="imgs/promo-1.png" alt="Resort promo 1">
+                <h2>Promo 1</h2>
+                <p>
+                    Lorem ipsum dolor sit amet  algo consectetur, adipisicing elit.  similique quod harum nihil, reiciendis natus ad.
+                </p>
+            </article>
+            <article>
+                <img src="imgs/promo-1.png" alt="Resort promo 2">
+                <h2>Promo 2</h2>
+                <p>
+                    Lorem ipsum dolor sit amet  algo consectetur, adipisicing elit.  similique quod harum nihil, reiciendis natus ad.
+                </p>
+            </article>
+            <article>
+                <img src="imgs/promo-1.png" alt="Resort promo 3">
+                <h2>Promo 3</h2>
+                <p>
+                    Lorem ipsum dolor sit amet  algo consectetur, adipisicing elit.  similique quod harum nihil, reiciendis natus ad.
+                </p>
+            </article>
+        </section>
+
+    </main>
+
 
 </body>
 </html>
