--- a/sitio/index.html
+++ b/sitio/index.html
@@ -52,6 +52,38 @@
                 </p>
             </article>
         </section>
+        <section id="destinos">
+            <div class="ciudad">
+                <img src="imgs/procida.png" alt="Puerto de Procida">
+                <div>
+                    <h2>Procida</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequatur deleniti eos est et ex facere fuga ipsa ipsum laborum, 
+                    </p>
+                    <a href="#">Consultar</a>
+                </div>
+            </div>
+            <div class="ciudad">
+                <img src="imgs/berlin.png" alt="Puerta de Brandenburgo">
+                <div>
+                    <h2>Berlin</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequatur deleniti eos est et ex facere fuga ipsa ipsum laborum, 
+                    </p>
+                    <a href="#">Consultar</a>
+                </div>
+            </div>
+            <div class="ciudad">
+                <img src="imgs/koh-phi-phi.png" alt="Playa de Koh Phi Phi">
+                <div>
+                    <h2>Koh Phi Phi</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequatur deleniti eos est et ex facere fuga ipsa ipsum laborum, 
+                    </p>
+                    <a href="#">Consultar</a>
+                </div>
+            </div>            
+        </section>
 
     </main>
 
