--- a/sitio/index.html
+++ b/sitio/index.html
@@ -134,6 +134,11 @@
 
         </section>
 
+        <section id="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.6926619341734!2d-0.11828644817536967!3d51.50050717953407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604b8be668bd9%3A0x803c1962e6448108!2s203%20Westminster%20Bridge%20Rd%2C%20London%20SE1%207FP%2C%20Reino%20Unido!5e0!3m2!1ses!2sar!4v1674172285869!5m2!1ses!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+
+
     </main>
 
 
